fixed logo spacing

--- a/app/stylesheets/partials/_application.sass
+++ b/app/stylesheets/partials/_application.sass
@@ -144,7 +144,12 @@ body
       
       .supporter
         +float-left
+        width: 275px
+        height: 100px
+        text-align: center
+        display: table-cell
         vertical-align: middle
+        
       
     #without_logos
       overflow: hidden
